# ReportBot

./: Cargo.toml  area.json  readme
src/: auth.rs  datetime.rs  dict.rs  discord.rs  file.rs  graph.rs  logs.rs  main.rs  request.rs
src/auth/: auth_file.rs  logs_key.rs  read_key.rs  webhook.rs
src/dict/: area.rs  area_check.rs  job.rs
src/discord/: msg_handler.rs  send_report.rs
src/file/: file_check.rs  input.rs  uploader.rs
src/graph/: wipe_graph.rs
src/logs/: ranking_data.rs  read_report.rs  report_count.rs
src/request/: json_struct.rs  logs.rs  query_graphql.rs
src/request/logs/: character.rs  data.rs  datum.rs  dps.rs  fight.rs  healer.rs  id.rs  rankings.rs  report.rs  report_data.rs  res.rs  role.rs  tank.rs  zone.rs
