[package]
name = "report_bot"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.78"
reqwest = {version = "0.11.22",  features = ["json", "multipart"]}
tokio = { version = "1.35.1", features = ["full"] }
dotenv = "0.15.0"
serde = { version = "1.0.108", features = ["derive", "rc"] }
serde_json = "1.0.108"
oauth2 = "4.4.2"
base64 = "0.22.0"
console = "0.15.7"
plotters = "0.3.5"
chrono = "0.4.31"